develop: add docker compose option and fix swagger info
